--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "my-code-of-countries-api",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel index.html"
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "keywords": [],
   "author": "",
@@ -20,3 +20,4 @@
     "react-router": "^7.1.5"
   }
 }
+
